--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   </head>
   <body>
     <h1> MediSane </h1>
-    <p> https://github.com/dilarayavuz/MediSane-backend </p>
+    <p> 
+      <a href="https://github.com/dilarayavuz/MediSane-backend">MediSane Backend Repository</a>
+      <a href="https://github.com/dilarayavuz/MediSane-android">MediSane Android Repository</a>
+    </p>
   </body>
 </html>
   
