github page add logo

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Document </title>  
+    <title> Document </title>
   </head>
   <body>
     <h1> MediSane </h1>
-    <p> 
+    <img src="https://github.com/dilarayavuz/MediSane-backend/blob/images/medisane_logo_logo.png" alt="MediSane Logo">
+    <div style="display: flex; flex-direction: column;">
       <a href="https://github.com/dilarayavuz/MediSane-backend">MediSane Backend Repository</a>
       <a href="https://github.com/dilarayavuz/MediSane-android">MediSane Android Repository</a>
-    </p>
+    </div>
   </body>
 </html>
-  
