--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1> MediSane </h1>
-    <img src="https://github.com/dilarayavuz/MediSane-backend/blob/images/medisane_logo.png" alt="MediSane Logo">
+    <img src=blob/images/medisane_logo.png  alt="MediSane Logo">
     <div style="display: flex; flex-direction: column;">
       <a href="https://github.com/dilarayavuz/MediSane-backend">MediSane Backend Repository</a>
       <a href="https://github.com/dilarayavuz/MediSane-android">MediSane Android Repository</a>
