--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
 
     <div>
         <div class="box">
-          <img src=blob/images/medisane_logo.png  alt="MediSane Logo">
+          <img src=blob/images/medisane_logo.png  alt="MediSane Logo" style="width: 10%;height: 10%;">
         </div>
 
         <div class="row-box">
               <div class="box">
-                <img src=blob/images/python_logo.png  alt="Python Logo" style="width:50px;height:60px;">
+                <img src=blob/images/python_logo.png  alt="Python Logo" style="width: 30%;height: 30%;">
                 <a href="https://github.com/dilarayavuz/MediSane-backend">MediSane Backend Repository</a>
               </div>
               <div class="box">
-                <img src=blob/images/android_logo.png  alt="Android Logo" style="width:50px;height:60px;">
+                <img src=blob/images/android_logo.png  alt="Android Logo" style="width: 30%;height: 30%;">
                 <a href="https://github.com/dilarayavuz/MediSane-android">MediSane Android Repository</a>
               </div>
 
