--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 700px;
+            max-width: 100%;
             margin: 60px auto;
             flex-direction: column;
             align-items: center;
@@ -66,7 +66,7 @@
 
     <div>
         <div class="box">
-          <img src=blob/images/medisane_logo.png  alt="MediSane Logo" style="width: 10%;height: 10%;">
+          <img src=blob/images/medisane_logo.png  alt="MediSane Logo" style="max-width:100%;height:auto;>
         </div>
 
         <div class="row-box">
