--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <div>
         <div class="box">
-          <img src=blob/images/medisane_logo.png  alt="MediSane Logo" style="max-width:100%;height:auto;>
+          <img src=blob/images/medisane_logo.png  alt="MediSane Logo" style="max-width:100%;height:auto;">
         </div>
 
         <div class="row-box">
