--- a/index.html
+++ b/index.html
@@ -28,11 +28,22 @@
 
         .box {
             border-radius: 10px;
-            padding: 20px;
+            padding: 25px;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             max-width: 500px;
             margin: 60px auto;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .smallBoxes {
+            border-radius: 10px;
+            padding: 25px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 500px;
+            margin: 60px 20px;
             flex-direction: column;
             align-items: center;
         }
@@ -70,12 +81,12 @@
         </div>
 
         <div class="row-box">
-              <div class="box">
-                <img src=blob/images/python_logo.png  alt="Python Logo" style="width: 30%;height: 30%;">
+              <div class="smallBoxes">
+                <img src=blob/images/python_logo.png  alt="Python Logo" style="max-height: 30%;width:auto;">
                 <a href="https://github.com/dilarayavuz/MediSane-backend">MediSane Backend Repository</a>
               </div>
-              <div class="box">
-                <img src=blob/images/android_logo.png  alt="Android Logo" style="width: 30%;height: 30%;">
+              <div class="smallBoxes">
+                <img src=blob/images/android_logo.png  alt="Android Logo" style="max-height: 30%;width:auto;">
                 <a href="https://github.com/dilarayavuz/MediSane-android">MediSane Android Repository</a>
               </div>
 
