--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             max-width: 500px;
-            margin: 60px 50px;
+            margin: 60px auto;
+            margin-left: 10px;
+            margin-right: 10px;
             flex-direction: column;
             align-items: center;
         }
