--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
             padding: 25px;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
+            max-width: 25%;
             margin: 60px auto;
-            margin-left: 10px;
-            margin-right: 10px;
             flex-direction: column;
             align-items: center;
         }
