--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
         </div>
 
         <div class="row-box">
-              <div class="smallBoxes">
+              <div class="box">
                 <img src=blob/images/python_logo.png  alt="Python Logo" style="max-height: 30%;width:auto;">
                 <a href="https://github.com/dilarayavuz/MediSane-backend">MediSane Backend Repository</a>
               </div>
-              <div class="smallBoxes">
+              <div class="box">
                 <img src=blob/images/android_logo.png  alt="Android Logo" style="max-height: 30%;width:auto;">
                 <a href="https://github.com/dilarayavuz/MediSane-android">MediSane Android Repository</a>
               </div>
