--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
             padding: 25px;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 10%;
+            max-width: 500px;
             margin: 60px auto;
+            margin-left: 12px;
+            margin-right: 12px;
             flex-direction: column;
             align-items: center;
         }
@@ -81,11 +83,11 @@
         </div>
 
         <div class="row-box">
-              <div class="box">
+              <div class="smallBoxes">
                 <img src=blob/images/python_logo.png  alt="Python Logo" style="max-width: 40%;width:auto;">
                 <a href="https://github.com/dilarayavuz/MediSane-backend">MediSane Backend Repository</a>
               </div>
-              <div class="box">
+              <div class="smallBoxes">
                 <img src=blob/images/android_logo.png  alt="Android Logo" style="max-width: 40%;width:auto;">
                 <a href="https://github.com/dilarayavuz/MediSane-android">MediSane Android Repository</a>
               </div>
